(PC-2458) Prevented action link to be hidden by offer title

--- a/src/styles/components/layout/Titles/_Titles.scss
+++ b/src/styles/components/layout/Titles/_Titles.scss
@@ -3,6 +3,8 @@
   padding-bottom: 0;
   padding-top: 0;
   position: relative;
+  display: flex;
+  flex-direction: column;
 
   .section-icon {
     background-image: url(/icons/ico-structure.svg);
@@ -39,20 +41,23 @@
     line-height: 22px;
     font-size: 1.125rem;
   }
+}
 
-  .tip-icon {
-    display: flex;
-    margin-left: 0.5rem;
+.title-subtitle-link-block {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: rem(10px);
+
+  h2 {
+    grid-column: 1 / 3;
   }
 
   .title-action-links {
-    align-items: center;
-    display: flex;
-    justify-content: flex-start;
-    top: 0px;
+    grid-column: 3;
 
     .link {
       display: flex;
+      justify-content: flex-end;
       font-weight: $weight-semibold;
       font-size: 14px;
       background-color: transparent;
@@ -63,6 +68,13 @@
         color: $primary;
       }
     }
+  }
+
+  img {
+    height: rem(20px);
+    margin: 0 rem(8px);
+    width: rem(20px);
+    max-width: none;
   }
 }
 
